--- a/VTPL/res/values/strings.xml
+++ b/VTPL/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_overview">Übersicht</string>
     <string name="title_timetable">Stundenplan</string>
     <string name="title_supplyplan">Vertretungsplan</string>
+    <string name="arrow_description">Arrow</string>
 
 </resources>
